--- a/human consulting.html
+++ b/human consulting.html
@@ -117,7 +117,6 @@
         <div class="container">
             <div class="row align-items-center text-center">
                 <div>
-
                     <p class="another-cta-text">
                         نحن في مكتب سلسلة للاستشارات نقدم مجموعة واسعة من الخدمات الاستشارية للموارد البشرية وتطوير
                         التنظيم لرواد الأعمال
@@ -135,7 +134,7 @@
                     <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         تشمل خدماتنا صياغة الخطط الاستراتيجية للموارد البشرية على المدى القصير وصياغة دليل السياسات
                         والإجراءات للموارد البشرية.
                         نقدم أيضاً خدمات صياغة مصفوفة الصلاحيات والمسؤوليات لإدارة الموارد البشرية والإدارة المالية.
@@ -152,7 +151,7 @@
                     <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         بالإضافة إلى ذلك، نقدم المشورة في الهيكل التنظيمي ووظائف الموظفين، والنصائح والتوجيه اللازمين
                         لتحسين تنظيمك الداخلي
                         وتحديد الوظائف المناسبة للموظفين وصياغة بطاقات الوصف الوظيفي. بإمكانك استشارة خبراء سلسلة في
