--- a/legal advice.html
+++ b/legal advice.html
@@ -133,7 +133,7 @@
                     <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح الداخلية وعقود
+                    <p class="p">نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح الداخلية وعقود
                         التأسيس، والمساعدة في
                         إكمال إجراءات التسجيل والحصول على التراخيص اللازمة لبدء العمل.</p>
                 </div>
@@ -148,7 +148,7 @@
                     <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         نقدم أيضاً المشورة فيما يتعلق بحماية حقوق الملكية الفكرية والابتكار، ومراجعة العقود والاتفاقيات
                         لضمان الامتثال القانوني
                         وحماية مصالح شركتك. بالإضافة إلى ذلك، نقدم الدعم القانوني في حالة وجود قضايا قانونية أو عمليات
@@ -169,7 +169,7 @@
                     <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         اعتمد على خبرتنا في تقديم المشورة القانونية لمجلس الإدارة وتحديث اللوائح الداخلية بانتظام للتأكد
                         من التوافق مع التطورات
                         القانونية الحالية. 
@@ -186,7 +186,7 @@
                     <img src="imgs/legale-img-4.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         إذا كنت تدير متجرًا إلكترونيًا، سلسلة موجودة لمساعدتك في صياغة العقود واللوائح، والتسجيل
                         والترخيص، وصياغة سياسات
                         الخصوصية والشروط والأحكام والاسترجاع والاستبدال.
