--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -120,7 +120,7 @@
                     <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         انطلاقاً من أهمية التسويق ودوره الفاعل في نجاح العمل تحرص سلسلة من خلال خبرائها المختصين على
                         تقديم استشارات تسويقية
                         شاملة لتطوير خطط واستراتيجيات التسويق التي تلبي احتياجات شركتك. بالإضافة إلى تصميم وتنفيذ حملات
@@ -139,7 +139,7 @@
                     <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         نحن نقدم أيضًا خدمات إدارة الهوية الرقمية وتطوير العلامة التجارية الرقمية والبصرية. نعمل على
                         بناء هوية قوية لعلامتك
                         التجارية وتصميم موقع إلكتروني متميز وسهل الاستخدام يعكس قيمتك ويجذب الجمهور المستهدف. باستخدام
@@ -161,12 +161,12 @@
                     <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         سواء كنت تحتاج إلى استشارات في مجال التسويق الرقمي، أو تطوير العلامة التجارية، أو تصميم حملات
                         إعلانية مبتكرة، فإننا هنا
                         لمساعدتك في تحقيق أهدافك ونجاحك الرقمي.
                     </p>
-                    <p>سنعمل معًا على تحقيق نتائج ملموسة وزيادة رؤية علامتك التجارية على الإنترنت. ونشر المحتوى المناسب
+                    <p class="p">سنعمل معًا على تحقيق نتائج ملموسة وزيادة رؤية علامتك التجارية على الإنترنت. ونشر المحتوى المناسب
                         على موقعك الإلكتروني
                         وتحسينه لتحقيق أفضل نتائج في محركات البحث.</p>
                 </div>
