--- a/marketing services.html
+++ b/marketing services.html
@@ -200,7 +200,7 @@
             <div class="mb-5 d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <div>
                     <h3>إدارة محتوى الموقع الالكتروني</h3>
-                    <p>
+                    <p class="p">
                         في مكتب سلسلة للاستشارات، نقدم مجموعة واسعة من الخدمات التي تتوافق مع تحسين محركات البحث (SEO)
                         وتهدف إلى مساعدة عملك على
                         الازدهار.
