--- a/technical consulting.html
+++ b/technical consulting.html
@@ -116,7 +116,6 @@
         <div class="container">
             <div class="row align-items-center text-center">
                 <div>
-
                     <p class="another-cta-text">
                         نحن في مكتب سلسلة للاستشارات نقدم خدمات الاستشارات والحلول التقنية لمساعدتك في اختيار الحلول
                         المناسبة لشركتك.
@@ -133,7 +132,7 @@
                     <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         نقوم بتقييم البنية التقنية الحالية لشركتك ونقدم التوصيات لتطويرها وتحديثها بما يتوافق مع أحدث
                         متطلبات تحسين محركات البحث
                         (SEO). كما نقدم المشورة الفنية لاختيار أنظمة تكنولوجيا المعلومات الملائمة لطبيعة عمل
@@ -153,7 +152,7 @@
                     <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p>
+                    <p class="p">
                         نقوم أيضًا بتحليل الاحتياجات البرمجية وتطوير حلول مخصصة تتناسب مع متطلبات عملك. 
                         ولا ننسى تقييم أمن المعلومات وخصوصية البيانات وتقديم الحلول والتدابير اللازمة لضمان سلامة
                         بياناتك والامتثال للمعايير
