Finalize the project

--- a/financial consulting.html
+++ b/financial consulting.html
@@ -120,7 +120,8 @@
                     المشاريع والمنشآت في المملكة العربية السعودية. نحن نسعى جاهدين لتحسين أداء الشركات وتطوير
                     استراتيجيات النجاح.
                 </p>
-                <img src="imgs/service-img-1.webp" class="img-fluid avatar service-img-1" alt="img">
+                <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/صورة رقم1.svg"
+                    class="img-fluid avatar service-img-1" alt="img">
             </div>
         </div>
     </section>
@@ -130,28 +131,35 @@
             <h3>تتضمن خدماتنا:</h3>
             <div class="d-flex flex-wrap justify-content-center gap-4">
                 <div class="service-block">
-                    <img src="imgs/icons/light-persons.svg" class="img-fluid" alt="icon">
-                    <p>تصميم وتطبيق الأنظمة المالية والمحاسبية.</p>
+                    <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم1.svg" class="img-fluid"
+                        alt="icon">
+                    <p>إعداد دراسات الجدوى الاقتصادية وفق المعايير المعتمدة</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
-                    <p>وضع السياسات والإجراءات المالية والمحاسبية.</p>
+                    <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم2.svg" class="img-fluid"
+                        alt="icon">
+                    <p>المشورة في التخطيط الإداري والمالي</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
-                    <p>وضع السياسات والإجراءات المالية والمحاسبية.</p>
+                    <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم3.svg" class="img-fluid"
+                        alt="icon">
+                    <p>وضع السياسات والإجراءات المالية
+                        والمحاسبية.</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
-                    <p>التدقيق والمراجعة المالية.</p>
+                    <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم4.svg" class="img-fluid"
+                        alt="icon">
+                    <p>تصميم وتطبيق الأنظمة المالية
+                        والمحاسبية</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/question.svg" class="img-fluid" alt="icon">
-                    <p>المشورة في التخطيط الإداري والمالي.</p>
+                    <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم5.svg" class="img-fluid"
+                        alt="icon">
+                    <p>التدقيق والمراجعة المالية</p>
                 </div>
             </div>
         </div>
@@ -159,9 +167,9 @@
 
     <section id="our-importent">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="our-importent-row">
                 <figure class="col-lg-6">
-                    <img src="imgs/skills.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
                 <div class="our-importent-content col-lg-6">
                     <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
