--- a/legal advice.html
+++ b/legal advice.html
@@ -126,14 +126,15 @@
         </div>
     </section>
 
-    <section id="more-info">
+    <section id="more-info" class="p-0">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                <figure class="w-100">
+                    <img src="imgs/صفحة الاستشارات القانونية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p class="p">نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح الداخلية وعقود
+                    <p class="p">نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح
+                        الداخلية وعقود
                         التأسيس، والمساعدة في
                         إكمال إجراءات التسجيل والحصول على التراخيص اللازمة لبدء العمل.</p>
                 </div>
@@ -144,8 +145,8 @@
     <section id="more-info" class="more-info-2">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
+                <figure class="d-lg-none d-block w-100">
+                    <img src="imgs/صفحة الاستشارات القانونية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -156,17 +157,17 @@
                     </p>
                 </div>
                 <figure class="d-none d-lg-block">
-                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات القانونية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
     </section>
 
-    <section id="more-info" class="more-info-3">
+    <section id="more-info" class="more-info-3 p-0">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                <figure class="w-100">
+                    <img src="imgs/صفحة الاستشارات القانونية/صورة رقم3.png" class="img-fluid w-100" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -183,7 +184,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-4.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات القانونية/صورة رقم4.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -193,10 +194,23 @@
                     </p>
                 </div>
                 <figure class="d-lg-block d-none">
-                    <img src="imgs/legale-img-4.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات القانونية/صورة رقم4.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
+    </section>
+
+    <section id="cta-2">
+        <div class="container">
+            <div class="text-center">
+                <p>
+                    اتصل بنا الآن واستفد من خبرتنا في مجال قانون الشركات
+                    نحن هنا لمساعدتك في تحقيق أهدافك القانونية ونمو شركتك.
+                </p>
+                <a href="tel:+966023114564" class="call-us">
+                    <span>اتصل بنا</span>
+                </a>
+            </div>
     </section>
 
     <footer>
