--- a/technical consulting.html
+++ b/technical consulting.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link
-        href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700;800;900&family=Lato:wght@400;500;700;800;900&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
@@ -129,7 +129,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -149,7 +149,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -160,7 +160,7 @@
                     </p>
                 </div>
                 <figure class="d-none d-lg-block">
-                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -183,33 +183,38 @@
             </p>
             <div class="d-flex flex-wrap justify-content-center gap-4">
                 <div class="service-block">
-                    <img src="imgs/icons/light-persons.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم1.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         الصيانة الدورية للموقع لضمان
                         استمرارية الأداء الأمثل.
                     </p>
                 </div>
                 <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم2.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         عمل نسخ احتياطية منتظمة لحماية بيانات الموقع والمحتوى.
                     </p>
                 </div>
                 <div class="service-block">
-                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم3.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
-                        التدقيق الأمني الدوري للتأكد من خلو الموقع من أي ثغرات وحمايته من الاختراق. 
+                        مراقبة أداء الموقع والعمل على تحسين سرعة التحميل ووقت الاستجابة. 
                     </p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم4.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         التدقيق الأمني الدوري للتأكد من خلو الموقع من أي ثغرات وحمايته من الاختراق. 
                     </p>
                 </div>
                 <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم5.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         ترقية الموقع وتحديثه باستخدام أحدث
                         التقنيات وأنظمة إدارة المحتوى.
@@ -224,25 +229,29 @@
             <h3>إدارة قواعد البيانات</h3>
             <div class="data-base-main-block">
                 <div class="data-base-block">
-                    <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم1.svg"
+                        class="img-fluid w-100" alt="icon">
                     <p>
                         إنشاء قواعد البيانات وتصميم الجداول اللازمة لتخزين واسترجاع المعلومات بسهولة وفعالية.
                     </p>
                 </div>
                 <div class="data-base-block">
-                    <img src="imgs/icons/link-document.png" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم2.svg"
+                        class="img-fluid w-100" alt="icon">
                     <p>
                         تنظيف وتنقية البيانات بشكل دوري لضمان دقتها وموثوقيتها.
                     </p>
                 </div>
                 <div class="data-base-block">
-                    <img src="imgs/icons/name-tag.png" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم3.svg"
+                        class="img-fluid w-100" alt="icon">
                     <p>
                         إدارة صلاحيات الوصول لقواعد البيانات وفقًا للصلاحيات المخولة لكل مستخدم.
                     </p>
                 </div>
                 <div class="data-base-block">
-                    <img src="imgs/icons/data-recovery.png" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم4.svg"
+                        class="img-fluid w-100" alt="icon">
                     <p>
                         تحديث قواعد البيانات وفقًا لمتطلبات عملك وعمل نسخ احتياطية منتظمة لحماية البيانات من الضياع أو
                         التلف.
@@ -256,9 +265,8 @@
         <div class="container">
             <div class="text-center">
                 <p>
-                    نحن ملتزمون بإدارة مخاطر إدارة الموارد البشرية بشكل فعال وتحقيق أقصى استفادة من استثمارك في الموارد
-                    البشرية.
-                    احصل على خدمات استشارية متخصصة في إدارة الموارد البشرية الآن!
+                    إذا كنت بحاجة إلى مساعدة، فلا تتردد في الاتصال بنا! نحن هنا لتقديم الدعم والإرشاد فيما يتعلق
+                    بخدماتنا وحلولنا التقنية.
                 </p>
                 <a href="tel:+966023114564" class="call-us">
                     <span>اتصل بنا</span>
