--- a/advertising services.html
+++ b/advertising services.html
@@ -116,8 +116,8 @@
     <section id="more-info" class="more-info-2 advertising-services advertising-services-more-info">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
-                    <img src="imgs/legale-img-2.webp" class="img-fluid" alt="img">
+                <figure class="w-100 h-100">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/صورة رقم1.svg" class="img-fluid w-100" alt="img">
                 </figure>
                 <div class="w-100">
                     <h3>خدمات التصميم</h3>
@@ -131,7 +131,8 @@
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-design-block">
-                        <img src="imgs/icons/Photo Editor.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/1.svg" class="img-fluid"
+                            alt="icon">
                         <h3>تصميم الصور والفيديوهات الدعائية والتسويقية:</h3>
                         <p>نقدم تصميمًا احترافيًا للصور والفيديوهات التي تعكس هوية علامتك التجارية وتساعد في جذب الجمهور
                             المستهدف وزيادة التفاعل.</p>
@@ -139,7 +140,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-design-block">
-                        <img src="imgs/icons/Cinema.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/2.svg" class="img-fluid"
+                            alt="icon">
                         <h3>تصميم المحتوى المرئي لمنصات التواصل الاجتماعي:</h3>
                         <p>
                             نقدم تصميمًا مبتكرًا وجذابًا للمحتوى المرئي على منصات التواصل الاجتماعي لزيادة مشاركة
@@ -150,7 +152,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-design-block">
-                        <img src="imgs/icons/Edit Image.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/3.svg" class="img-fluid"
+                            alt="icon">
                         <h3>تحرير ومعالجة الصور ومقاطع الفيديو:</h3>
                         <p>
                             نقوم بتحرير وتعديل الصور ومقاطع الفيديو بمهارة عالية لتحسين جودتها وجعلها أكثر جاذبية
@@ -160,7 +163,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-design-block">
-                        <img src="imgs/icons/Video Trimming-2.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/4.svg" class="img-fluid"
+                            alt="icon">
                         <h3>إنتاج صور وفيديوهات جذابة ذات جودة عالية:</h3>
                         <p>
                             نقدم صورًا وفيديوهات ذات جودة عالية تلفت انتباه الجمهور وتعزز قيمة علامتك التجارية.
@@ -169,7 +173,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-design-block">
-                        <img src="imgs/icons/Flow Chart.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/5.svg" class="img-fluid"
+                            alt="icon">
                         <h3>تصميم إنفوجرافيك إيضاحي وتفاعلي:</h3>
                         <p>
                             نقدم تصميمًا مبتكرًا للإنفوجرافيك يسهم في توضيح المعلومات وتفاعل المستخدمين معها.
@@ -178,16 +183,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-design-block">
-                        <img src="imgs/icons/Tree Structure.png" class="img-fluid" alt="icon">
-                        <h3>تصميم إنفوجرافيك</h3>
-                        <p>
-                            جذاب لنقل المعلومات بطريقة بصرية شيقة.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-design-block">
-                        <img src="imgs/icons/Doughnut Chart.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/6.svg" class="img-fluid"
+                            alt="icon">
                         <h3>ابتكار تصاميم إنفوجرافيك إبداعية وفريدة</h3>
                         <p>
                             تساعد في تمييز علامتك التجارية وجذب الانتباه.
@@ -208,39 +205,45 @@
     <section id="our-services" class="advertising-services">
         <div class="container text-center">
             <div class="d-flex flex-wrap justify-content-center gap-4">
-                <div class="service-block">
-                    <img src="imgs/icons/light-persons.svg" class="img-fluid" alt="icon">
+                <div class="service-block linear-block">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم1.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         تخطيط وتنفيذ حملات إعلانية على محركات البحث وشبكات التواصل الاجتماعي ومنصات الإعلانات المختلفة.
                     </p>
                 </div>
-                <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                <div class="service-block linear-block">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم2.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         تصميم وإنتاج محتوى إعلاني جذاب من صور وفيديوهات وإنفوجرافيك.
                     </p>
                 </div>
-                <div class="service-block">
-                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
+                <div class="service-block linear-block">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم3.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         دراسة وتحليل عميق للسوق المستهدف.
                     </p>
                 </div>
 
-                <div class="service-block">
-                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
+                <div class="service-block linear-block">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم4.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         تحديد شخصية الجمهور المستهدف من صفات ديموغرافية كالعمر والجنس والاهتمامات ومستوى الدخل.
                     </p>
                 </div>
-                <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                <div class="service-block linear-block">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم5.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         اختيار الكلمات المفتاحية المستهدفة.
                     </p>
                 </div>
-                <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                <div class="service-block linear-block">
+                    <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم6.svg"
+                        class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         قياس نتائج الحملات الإعلانية وتحليلها.
                     </p>
