--- a/human consulting.html
+++ b/human consulting.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -160,7 +160,7 @@
                     </p>
                 </div>
                 <figure class="d-lg-block d-none">
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -169,29 +169,29 @@
     <section id="our-services">
         <div class="container">
             <h3>تتضمن خدماتنا:</h3>
-            <div class="d-flex flex-wrap justify-content-center gap-4">
+            <div class="our-services-row">
                 <div class="service-block">
-                    <img src="imgs/icons/light-persons.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم1.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">إعداد الموازنة التقديرية لتكلفة التوظيف
                         الجديد ووضع سلم ودليل للرواتب والمزايا.</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم2.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">وضع سياسات وبرامج التدريب والتطوير
                         الوظيفي لمساعدتك في تطوير مهارات
                         وقدرات موظفيك.</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/check.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم3.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">المساعدة في تصميم نظام تقييم الأداء
                         الوظيفي وصياغة مؤشرات قياس الأداء
                         للوظائف الرئيسية.</p>
                 </div>
 
                 <div class="service-block">
-                    <img src="imgs/icons/pen.svg" class="img-fluid" alt="icon">
+                    <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم4.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">تحديد مكافآت وحوافز الموظفين، حيث سنقدم لك النصائح المناسبة لتحديد
                         مكافآت تحفز الموظفين وتعزز أدائهم.</p>
                 </div>
