--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -117,7 +117,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -136,7 +136,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -148,7 +148,7 @@
                     </p>
                 </div>
                 <figure class="d-lg-block d-none">
-                    <img src="imgs/legale-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure>
-                    <img src="imgs/human-consulting-img-1.webp" class="img-fluid" alt="img">
+                    <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم3.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
                     <p class="p">
@@ -166,7 +166,8 @@
                         إعلانية مبتكرة، فإننا هنا
                         لمساعدتك في تحقيق أهدافك ونجاحك الرقمي.
                     </p>
-                    <p class="p">سنعمل معًا على تحقيق نتائج ملموسة وزيادة رؤية علامتك التجارية على الإنترنت. ونشر المحتوى المناسب
+                    <p class="p">سنعمل معًا على تحقيق نتائج ملموسة وزيادة رؤية علامتك التجارية على الإنترنت. ونشر
+                        المحتوى المناسب
                         على موقعك الإلكتروني
                         وتحسينه لتحقيق أفضل نتائج في محركات البحث.</p>
                 </div>
