--- a/financial consulting.html
+++ b/financial consulting.html
@@ -168,10 +168,10 @@
     <section id="our-importent">
         <div class="container">
             <div class="our-importent-row">
-                <figure class="col-lg-6">
+                <figure class="col-lg-6 col-12">
                     <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
-                <div class="our-importent-content col-lg-6">
+                <div class="our-importent-content col-lg-6 col-12">
                     <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
                     <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير الدولية ونقدم
                         استشارات متخصصة لتحسين
