--- a/legal advice.html
+++ b/legal advice.html
@@ -128,7 +128,7 @@
 
     <section id="more-info" class="p-0">
         <div class="container">
-            <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
+            <div class="d-flex flex-column gap-0 gap-lg-5 flex-lg-row align-items-center justify-content-between">
                 <figure class="w-100">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
@@ -163,9 +163,9 @@
         </div>
     </section>
 
-    <section id="more-info" class="more-info-3 p-0">
+    <section id="more-info" class="more-info-3 pt-md-0">
         <div class="container">
-            <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
+            <div class="d-flex gap-0 gap-lg-5 flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="w-100">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم3.png" class="img-fluid w-100" alt="img">
                 </figure>
