--- a/technical consulting.html
+++ b/technical consulting.html
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <section id="more-info" class="more-info-2">
+    <section id="more-info" class="more-info-2 bg-white">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <figure class="d-lg-none d-block">
