--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -119,7 +119,7 @@
                     والقانونية ودراسات الجدوى وتخطيط الأعمال والتسويق وتأهيل الموارد البشرية بتوجيهات من خبراء
                     محترفين. في سلسلة نلبي
                     احتياجات رواد الأعمال والقائمين على المشاريع في مختلف المجالات الصناعية والتجارية والتقنية.</p>
-                <img src="imgs/more-about-us.webp" class="img-fluid avatar" alt="img">
+                <img src="imgs/صفحة من نحن/صورة رقم3.svg" class="img-fluid avatar" alt="img">
             </div>
         </div>
     </section>
@@ -195,61 +195,61 @@
             <div class="row justify-content-center gy-4">
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم1.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز الريادة</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم2.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز الشفافية <br> والمصداقية </h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم3.svg" alt="icon" class="img-fluid">
                         <h4>تطوير وتعزيز قدرات <br> الموارد البشرية </h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم4.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز مفاهيم الابتكار<br> والبحث والتطوير</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم5.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز القيمة <br>المضافة</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم6.svg" alt="icon" class="img-fluid">
                         <h4>بناء شراكات<br> استراتيجية</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم7.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز التواصل</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم8.svg" alt="icon" class="img-fluid">
                         <h4>توفير الموارد المالية للمشاريع</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم9.svg" alt="icon" class="img-fluid">
                         <h4>توفير برامج التدريب <br> والتطوير</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="our-goals-block">
-                        <img src="imgs/icons/persons.svg" alt="icon" class="img-fluid">
+                        <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم10.svg" alt="icon" class="img-fluid">
                         <h4>تقديم التوجيه <br> والإرشاد</h4>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
             <div class="row gy-5">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-value-block text-center">
-                        <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم1.svg" class="img-fluid" alt="icon">
                         <h4>الابتكار</h4>
                         <p>نعمل لتحفيز الابتكار والتفكير الإبداعي، حيث نقدم حلولاً مُبتكرة تلبي احتياجات رواد الأعمال
                             وأصحاب المشاريع.
@@ -272,14 +272,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-value-block text-center">
-                        <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم2.svg" class="img-fluid" alt="icon">
                         <h4>التعاون</h4>
                         <p>نؤمن بقوة التعاون والشراكة، حيث نعمل معاً لتحقيق أهداف مشتركة وبناء مستقبل أفضل للجميع.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-value-block text-center">
-                        <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم3.svg" class="img-fluid" alt="icon">
                         <h4>الجودة</h4>
                         <p>نحرص على تقديم خدمات ذات جودة عالية تتسم بالدقة والاحترافية، مع التركيز على تحقيق التميز في
                             كل ما نقدمه.</p>
@@ -287,7 +287,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-value-block text-center">
-                        <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم4.svg" class="img-fluid" alt="icon">
                         <h4>النزاهة</h4>
                         <p>نحافظ على مبادئ النزاهة والشفافية في جميع تعاملاتنا، مع الالتزام بأعلى معايير الأخلاقيات
                             التجارية</p>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-value-block text-center">
-                        <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم5.svg" class="img-fluid" alt="icon">
                         <h4>التميز</h4>
                         <p>نسعى دائماً لتحقيق التميز في كل جوانب عملنا، مع التركيز على تقديم حلول مُخصصة تلبي احتياجات
                             عملائنا بفعالية</p>
@@ -303,7 +303,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="our-value-block text-center">
-                        <img src="imgs/icons/data-backup.png" class="img-fluid" alt="icon">
+                        <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم6.svg" class="img-fluid" alt="icon">
                         <h4>المسؤولية الاجتماعية</h4>
                         <p>نسعى لدعم التنمية المستدامة في المملكة بما يتماشى مع رؤية المملكة 2030.</p>
                     </div>
